--- a/ProyectoAngular/src/app/app.component.html
+++ b/ProyectoAngular/src/app/app.component.html
@@ -4,7 +4,10 @@
 <div>
   <p>Nombre del Empleado:{{nombre}}</p>
   <p>Edad:{{edad}}</p>  
+  <p>El empleado dentro de 5 años tendrá:{{edad+5}}</p>
   <p>Los últimos tres sueldos son: {{sueldos[0]}}, {{sueldos[1]}} y {{sueldos[2]}}</p>
   <p>En los últimos 3 meses ha ganado: {{ultimos3Sueldos()}}</p>
+  <!--  <p>En los últimos 3 meses ha ganado: {{sueldos[0]+sueldos[1]+sueldos[2]}}</p>    -->
+  <p>Puede visitar el sitio ingresando <a href="{{sitio}}">aquí</a></p>
   <p>{{esActivo()}}</p>
 </div>
