--- a/ProyectoAngular/src/app/app.component.html
+++ b/ProyectoAngular/src/app/app.component.html
@@ -1,7 +1,9 @@
 <h1 style="text-align:center">
   Bienvenido a {{ title }}
 </h1>
+
 <div>
+  <h2> Ejemplo Iterpolacion </h2>
   <p>Nombre del Empleado:{{nombre}}</p>
   <p>Edad:{{edad}}</p>  
   <p>El empleado dentro de 5 años tendrá:{{edad+5}}</p>
@@ -10,4 +12,20 @@
   <!--  <p>En los últimos 3 meses ha ganado: {{sueldos[0]+sueldos[1]+sueldos[2]}}</p>    -->
   <p>Puede visitar el sitio ingresando <a href="{{sitio}}">aquí</a></p>
   <p>{{esActivo()}}</p>
+</div>
+
+<div>
+  <h2> Ejemplo ngIf - else y ngFor </h2>
+  <p>Nombre del Empleado:{{nombre}}</p>
+  <p>Edad:{{edad}}</p>
+  <p *ngIf="edad>=18; else menor">Es mayor de edad.</p>
+    <table border="1">
+      <tr>
+        <td>Sueldos</td>
+      </tr>
+      <tr *ngFor="let sueldo of sueldos">
+        <td>{{sueldo}}</td>
+      </tr>
+    </table>
+  <ng-template #menor><p>Es un menor de edad.</p></ng-template> 
 </div>
